rename font-weight, letter-spacing

--- a/places.html
+++ b/places.html
@@ -1244,7 +1244,7 @@
                                                     class="card-alt-4__title-fw card-alt-4__title dir dir-ltr"
                                                     style="
                                                       --title_font-weight: var(
-                                                        --e-y-j-d-v-j
+                                                        --font-weight-normal
                                                       );
                                                       --title_num-lines: 2;
                                                     "
@@ -1500,7 +1500,7 @@
                                                     class="card-alt-4__title-fw card-alt-4__title dir dir-ltr"
                                                     style="
                                                       --title_font-weight: var(
-                                                        --e-y-j-d-v-j
+                                                        --font-weight-normal
                                                       );
                                                       --title_num-lines: 2;
                                                     "
@@ -1756,7 +1756,7 @@
                                                     class="card-alt-4__title-fw card-alt-4__title dir dir-ltr"
                                                     style="
                                                       --title_font-weight: var(
-                                                        --e-y-j-d-v-j
+                                                        --font-weight-normal
                                                       );
                                                       --title_num-lines: 2;
                                                     "
@@ -2523,7 +2523,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
@@ -3235,7 +3235,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
@@ -3947,7 +3947,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
@@ -4659,7 +4659,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
@@ -5363,7 +5363,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
@@ -6075,7 +6075,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
@@ -6789,7 +6789,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
@@ -7421,7 +7421,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
@@ -8053,7 +8053,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
@@ -8765,7 +8765,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
@@ -9478,7 +9478,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
@@ -10191,7 +10191,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
@@ -10903,7 +10903,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
@@ -11615,7 +11615,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
@@ -12321,7 +12321,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
@@ -13033,7 +13033,7 @@
                                             lang="en"
                                             style="
                                               --title_font-weight: var(
-                                                --e-y-j-d-v-j
+                                                --font-weight-normal
                                               );
                                               --title_num-lines: 1;
                                             "
