--- a/profile.html
+++ b/profile.html
@@ -1314,7 +1314,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                             class="card-alt-4__title-fw card-alt-4__title-sm dir dir-ltr"
                                                             style="
                                                               --title_font-weight: var(
-                                                                --e-y-j-d-v-j
+                                                                --font-weight-normal
                                                               );
                                                               --title_num-lines: 2;
                                                             "
@@ -2418,7 +2418,7 @@ This is my about me section. I'm a millennial from the Philippines.</textarea
                                                       class="card-alt-4__title-fw card-alt-4__title dir dir-ltr"
                                                       style="
                                                         --title_font-weight: var(
-                                                          --e-y-j-d-v-j
+                                                          --font-weight-normal
                                                         );
                                                         --title_num-lines: 2;
                                                       "
