--- a/wishlist.html
+++ b/wishlist.html
@@ -534,7 +534,7 @@
                                             </ol>
                                           </div>
                                           <div class="card-alt-4__title-wrapper dir dir-ltr">
-                                            <span class="card-alt-4__title-fw card-alt-4__title t1nzedvd dir dir-ltr" id="title_35385880" lang="en" style="--title_font-weight:var(--e-y-j-d-v-j); --title_num-lines:1;">
+                                            <span class="card-alt-4__title-fw card-alt-4__title t1nzedvd dir dir-ltr" id="title_35385880" lang="en" style="--title_font-weight:var(--font-weight-normal); --title_num-lines:1;">
                                               Family Home in Azure Urban Resort</span>
                                           </div>
                                           <div class="place__nearby-card-spacer dir dir-ltr">
@@ -816,7 +816,7 @@
                                             </ol>
                                           </div>
                                           <div class="card-alt-4__title-wrapper dir dir-ltr">
-                                            <span class="card-alt-4__title-wrapper card-alt-4__title t1nzedvd dir dir-ltr" id="title_16354372" lang="en" style="--title_font-weight:var(--e-y-j-d-v-j); --title_num-lines:1;">
+                                            <span class="card-alt-4__title-wrapper card-alt-4__title t1nzedvd dir dir-ltr" id="title_16354372" lang="en" style="--title_font-weight:var(--font-weight-normal); --title_num-lines:1;">
                                               9 double bedroom luxury villa with infinity pool</span>
                                           </div>
                                           <div class="place__nearby-card-spacer dir dir-ltr">
@@ -1108,7 +1108,7 @@
                                             </ol>
                                           </div>
                                           <div class="card-alt-4__title-wrapper dir dir-ltr">
-                                            <span class="card-alt-4__title-wrapper card-alt-4__title t1nzedvd dir dir-ltr" id="title_48175307" lang="en" style="--title_font-weight:var(--e-y-j-d-v-j); --title_num-lines:1;">
+                                            <span class="card-alt-4__title-wrapper card-alt-4__title t1nzedvd dir dir-ltr" id="title_48175307" lang="en" style="--title_font-weight:var(--font-weight-normal); --title_num-lines:1;">
                                               Baguio HillHouse Max 6 Adults 2 Kids below 13 Free</span>
                                           </div>
                                         </div>
@@ -1320,7 +1320,7 @@
                                             </ol>
                                           </div>
                                           <div class="card-alt-4__title-wrapper dir dir-ltr">
-                                            <span class="card-alt-4__title-wrapper card-alt-4__title t1nzedvd dir dir-ltr" id="title_41297332" lang="en" style="--title_font-weight:var(--e-y-j-d-v-j); --title_num-lines:1;">
+                                            <span class="card-alt-4__title-wrapper card-alt-4__title t1nzedvd dir dir-ltr" id="title_41297332" lang="en" style="--title_font-weight:var(--font-weight-normal); --title_num-lines:1;">
                                               Baguio Transient Magnolia DOT ACCREDITED</span>
                                           </div>
                                         </div>
@@ -1443,7 +1443,7 @@
                                                               </span>
                                                             </div>
                                                             <div class="card-alt-4__title-wrapper dir dir-ltr" style="--margin-top:6px;">
-                                                              <span class="card-alt-4__title-wrapper tl3qa0j dir dir-ltr" style="--title_font-weight:var(--e-y-j-d-v-j); --title_num-lines:2;">
+                                                              <span class="card-alt-4__title-wrapper tl3qa0j dir dir-ltr" style="--title_font-weight:var(--font-weight-normal); --title_num-lines:2;">
                                                                 Discover Sunny Fort Lauderdale</span>
                                                             </div>
                                                           </div>
@@ -1543,7 +1543,7 @@
                                                         <div class="tbkcueg dir dir-ltr">
                                                           <div class="k1ewfm7r dir dir-ltr">
                                                             <div class="card-alt-4__title-wrapper dir dir-ltr" style="--margin-top:6px;">
-                                                              <span class="card-alt-4__title-wrapper tl3qa0j dir dir-ltr" style="--title_font-weight:var(--e-y-j-d-v-j); --title_num-lines:2;">
+                                                              <span class="card-alt-4__title-wrapper tl3qa0j dir dir-ltr" style="--title_font-weight:var(--font-weight-normal); --title_num-lines:2;">
                                                                 Wu Qin Xi, Five Animal Plays Qigong</span>
                                                             </div>
                                                           </div>
@@ -1657,7 +1657,7 @@
                                                               </span>
                                                             </div>
                                                             <div class="card-alt-4__title-wrapper dir dir-ltr" style="--margin-top:6px;">
-                                                              <span class="card-alt-4__title-wrapper tl3qa0j dir dir-ltr" style="--title_font-weight:var(--e-y-j-d-v-j); --title_num-lines:2;">
+                                                              <span class="card-alt-4__title-wrapper tl3qa0j dir dir-ltr" style="--title_font-weight:var(--font-weight-normal); --title_num-lines:2;">
                                                                 Relaxing Traditional Shadow Plays from Japan</span>
                                                             </div>
                                                           </div>
@@ -2467,7 +2467,7 @@
                                                   lang="en"
                                                   style="
                                                     --title_font-weight: var(
-                                                      --e-y-j-d-v-j
+                                                      --font-weight-normal
                                                     );
                                                     --title_num-lines: 1;
                                                   "
@@ -3115,7 +3115,7 @@
                                                   lang="en"
                                                   style="
                                                     --title_font-weight: var(
-                                                      --e-y-j-d-v-j
+                                                      --font-weight-normal
                                                     );
                                                     --title_num-lines: 1;
                                                   "
@@ -3859,7 +3859,7 @@
                                                   lang="en"
                                                   style="
                                                     --title_font-weight: var(
-                                                      --e-y-j-d-v-j
+                                                      --font-weight-normal
                                                     );
                                                     --title_num-lines: 1;
                                                   "
@@ -4618,7 +4618,7 @@
                                                   lang="en"
                                                   style="
                                                     --title_font-weight: var(
-                                                      --e-y-j-d-v-j
+                                                      --font-weight-normal
                                                     );
                                                     --title_num-lines: 1;
                                                   "
@@ -5214,7 +5214,7 @@
                                                   lang="en"
                                                   style="
                                                     --title_font-weight: var(
-                                                      --e-y-j-d-v-j
+                                                      --font-weight-normal
                                                     );
                                                     --title_num-lines: 1;
                                                   "
@@ -5530,7 +5530,7 @@
                                                               class="card-alt-4__title-fw tl3qa0j dir dir-ltr"
                                                               style="
                                                                 --title_font-weight: var(
-                                                                  --e-y-j-d-v-j
+                                                                  --font-weight-normal
                                                                 );
                                                                 --title_num-lines: 2;
                                                               "
@@ -5898,7 +5898,7 @@
                                                               class="card-alt-4__title-fw tl3qa0j dir dir-ltr"
                                                               style="
                                                                 --title_font-weight: var(
-                                                                  --e-y-j-d-v-j
+                                                                  --font-weight-normal
                                                                 );
                                                                 --title_num-lines: 2;
                                                               "
@@ -6236,7 +6236,7 @@
                                                               class="card-alt-4__title-fw tl3qa0j dir dir-ltr"
                                                               style="
                                                                 --title_font-weight: var(
-                                                                  --e-y-j-d-v-j
+                                                                  --font-weight-normal
                                                                 );
                                                                 --title_num-lines: 2;
                                                               "
