--- a/contact-host.html
+++ b/contact-host.html
@@ -480,7 +480,7 @@
                                                       <div
                                                         style="
                                                           font-weight: var(
-                                                            --jx-zk-pv
+                                                            --font-weight-semibold
                                                           );
                                                         "
                                                       >
@@ -532,7 +532,7 @@
                                                       <div
                                                         style="
                                                           font-weight: var(
-                                                            --jx-zk-pv
+                                                            --font-weight-semibold
                                                           );
                                                         "
                                                       >
@@ -578,7 +578,7 @@
                                                       <div
                                                         style="
                                                           font-weight: var(
-                                                            --jx-zk-pv
+                                                            --font-weight-semibold
                                                           );
                                                         "
                                                       >
@@ -1928,7 +1928,7 @@
                                                       <div
                                                         style="
                                                           font-weight: var(
-                                                            --jx-zk-pv
+                                                            --font-weight-semibold
                                                           );
                                                         "
                                                       >
@@ -1974,7 +1974,7 @@
                                                       <div
                                                         style="
                                                           font-weight: var(
-                                                            --jx-zk-pv
+                                                            --font-weight-semibold
                                                           );
                                                         "
                                                       >
@@ -2014,7 +2014,7 @@
                                                       <div
                                                         style="
                                                           font-weight: var(
-                                                            --jx-zk-pv
+                                                            --font-weight-semibold
                                                           );
                                                         "
                                                       >
